# tt_referral_system_api

./: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 7b7f97aa8fc5_.py
app/: dependences.py  main.py
app/api/: main.py
app/api/routes/: referral_code.py  user.py
app/core/: config.py  database.py  redis.py  security.py  utils.py
app/crud/: referral_code.py  user.py
app/models/: __init__.py  jwt.py  referral_code.py  user.py
