[project]
name = "tt-referral-system-api"
description = "tets task for controlgps.org"
authors = [{ name = "vladislav mikhalev", email = "me@vladislav6856.ru" }]
version = "0.1.0"
requires-python = ">=3.13"
readme = "README.md"

dependencies = [
    "fastapi (>=0.115.8,<0.116.0)",
    "pydantic-settings (>=2.7.1,<3.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "alembic (>=1.14.1,<2.0.0)",
    "sqlmodel (>=0.0.22,<0.0.23)",
    "greenlet (>=3.1.1,<4.0.0)",
    "pytz (>=2025.1,<2026.0)",
    "uvicorn (>=0.34.0,<0.35.0)",
    "passlib (>=1.7.4,<2.0.0)",
    "bcrypt (>=4.2.1,<5.0.0)",
    "python-multipart (>=0.0.20,<0.0.21)",
    "httpx (>=0.28.1,<0.29.0)",
    "pydantic[email] (>=2.10.6,<3.0.0)",
    "pyjwt (>=2.10.1,<3.0.0)",
    "redis[asyncio] (>=5.2.1,<6.0.0)",
]


[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=2.0.0,<3.0.0"]


[tool.poetry]
package-mode = false


[tool.ruff]
target-version = "py313"
line-length = 128
# exclude = ["__init__.py", "alembic"]
# ignore = ["F401", "D403", "D405", "TC004", "DOC201", "DOC402", "DOC501", "RUF001", "RUF002", "DTZ007", "DTZ005"]


[tool.ruff.lint]
select = ["ALL"]
preview = true


[tool.ruff.format]
preview = true
